changing name to exo

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -149,7 +149,7 @@
         </div>
         <div class="section-content">
             Our policy keeps updating from time to time. The use of collected information is subjected to the privacy policy in the effect of the time we use it. Users of our website must abide by the changes in our privacy policy even when they use our website after the posting of the changes.
-            In case of any queries, contact us at <a class="link" href="mailto:info@quzutv.com">info@quzutv.com</a>
+            In case of any queries, contact us at <a class="link" href="mailto:info@exoapp.tv">info@exoapp.tv</a>
         </div>
     </div>
 </div>
