--- a/terms_conditions.html
+++ b/terms_conditions.html
@@ -32,9 +32,9 @@
         Terms and Conditions
     </div>
     <div class="header-description">
-        This document comprises of a legally comprising agreement connecting you as a user of our website and Quzu TV. Make sure to read the following terms and conditions before you agree to use our services. All terms not defined in this document have the meanings attributed to them in the Terms of Use Agreement between you and Quzu TV which by using this website you agree to understand.
-        Accepting the use of Quzu TV Terms and Conditions
-        Your access to and use of Quzu TV is subjected exclusively to these Terms and Conditions. You will not be allowed to use the Website for any other purpose deemed illegal or prohibited by these Terms and Conditions. By using our website, you are completely accepting the terms, conditions, and disclaimers included in this notice. If you don't accept any of our Terms and Conditions, it is advisable to stop the use of our website immediately.
+        This document comprises of a legally comprising agreement connecting you as a user of our website and Exo TV. Make sure to read the following terms and conditions before you agree to use our services. All terms not defined in this document have the meanings attributed to them in the Terms of Use Agreement between you and Exo TV which by using this website you agree to understand.
+        Accepting the use of Exo TV Terms and Conditions
+        Your access to and use of Exo TV is subjected exclusively to these Terms and Conditions. You will not be allowed to use the Website for any other purpose deemed illegal or prohibited by these Terms and Conditions. By using our website, you are completely accepting the terms, conditions, and disclaimers included in this notice. If you don't accept any of our Terms and Conditions, it is advisable to stop the use of our website immediately.
     </div>
     <div class="section">
         <div class="section-title">
@@ -46,13 +46,13 @@
                     We provide our website on an AS IS and AS AVAILABLE basis without representing or endorsing as well as without a warranty of any type whether articulated or implied, including but not restricted to the implied warranties of satisfactory quality, fitness for a specific purpose, non-infringement, compatibility, security and accuracy.
                 </li>
                 <li>
-                    To the extent till the law permits us, Quzu TV cannot be held liable for any indirect or substantial loss (together without limitation loss of business, opportunity, data, profits) occurring out of or in association with the use of the Website.
+                    To the extent till the law permits us, Exo TV cannot be held liable for any indirect or substantial loss (together without limitation loss of business, opportunity, data, profits) occurring out of or in association with the use of the Website.
                 </li>
                 <li>
-                    Quzu TV does give assurance that the functionality of the Website is going to be uninterrupted or error-free, that defects will be fixed or that the Website or the server that makes it accessible are free of viruses or anything else which may be damaging.
+                    Exo TV does give assurance that the functionality of the Website is going to be uninterrupted or error-free, that defects will be fixed or that the Website or the server that makes it accessible are free of viruses or anything else which may be damaging.
                 </li>
                 <li>
-                    Nothing in these Terms and Conditions shall be interpreted so as to eliminate or restrict the liability of Quzu TV personal injury as a result of the negligence of Quzu TV or that of its employees or agent.
+                    Nothing in these Terms and Conditions shall be interpreted so as to eliminate or restrict the liability of Exo TV personal injury as a result of the negligence of Exo TV or that of its employees or agent.
                 </li>
             </ul>
         </div>
@@ -62,7 +62,7 @@
             Private Home Viewing Only
         </div>
         <div class="section-content">
-            Quzu TV offers it services solely for the purpose of viewing, using and enjoying at your private home. You must agree that none of our services provided will be used or viewed in areas open to the public, commercial organizations or other residential locations.
+            Exo TV offers it services solely for the purpose of viewing, using and enjoying at your private home. You must agree that none of our services provided will be used or viewed in areas open to the public, commercial organizations or other residential locations.
             We may not rebroadcast or perform our services and admission may not be charged when you listen, use or view any services.
             Please remember, if we find you using or viewing the services in an area open to the public, a commercial organization or some other residential location, we can disconnect your services without any refund.
         </div>
@@ -80,7 +80,7 @@
             Minimum Programming Levels
         </div>
         <div class="section-content">
-            Quzu TV reserves the right to acquire and/or change minimum programming needs at any time. For example Ban/Remove/Change, and without restriction, Quzu TV may need a minimum commitment term.
+            Exo TV reserves the right to acquire and/or change minimum programming needs at any time. For example Ban/Remove/Change, and without restriction, Exo TV may need a minimum commitment term.
         </div>
     </div>
     <div class="section">
@@ -113,9 +113,9 @@
             Payment Information
         </div>
         <div class="section-content">
-            Quzu TV shares your Payment Information with banks relevant to your transaction for enabling transactions to complete. Moreover, Quzu TV may use payment information for determining your credit-worthiness. During the procedure of determining that, we can make the payment information available to banks or credit agencies.
-            Quzu TV offers up-to-date technology and internal procedures for guarding your payment information against intruders. However, please note we are not guaranteeing that such technology will fully eliminate all the risks of theft, loss or misuse.
-            Quzu TV will not be accountable to you or anyone else for any damage that might occur from unauthorized use, publication, disclosure or any other misuse of payment information including your credit card information.
+            Exo TV shares your Payment Information with banks relevant to your transaction for enabling transactions to complete. Moreover, Exo TV may use payment information for determining your credit-worthiness. During the procedure of determining that, we can make the payment information available to banks or credit agencies.
+            Exo TV offers up-to-date technology and internal procedures for guarding your payment information against intruders. However, please note we are not guaranteeing that such technology will fully eliminate all the risks of theft, loss or misuse.
+            Exo TV will not be accountable to you or anyone else for any damage that might occur from unauthorized use, publication, disclosure or any other misuse of payment information including your credit card information.
             To be clear, we won't charge you for the app and its services without providing you with complete transparency for what you're paying.
         </div>
     </div>
@@ -124,8 +124,8 @@
             Payments and Billing
         </div>
         <div class="section-content">
-            Rates and Prices: You must acknowledge that the nature of the service furnished and the rates plus charges have been made clear to you. Keep in mind that Quzu TV reserves the right of changing the rates and prices which we specify in ‘Other Fees'.
-            Payments: When you order, you agree to pay Quzu TV. All fees are going to be due instantly and non-refundable, with the exceptions mentioned in the section below, even if the services are suspended, terminated or transferred prior to the end of the term of service. Quzu TV explicitly reserves the right to alter pricing through email notification and/or notice on its website.
+            Rates and Prices: You must acknowledge that the nature of the service furnished and the rates plus charges have been made clear to you. Keep in mind that Exo TV reserves the right of changing the rates and prices which we specify in ‘Other Fees'.
+            Payments: When you order, you agree to pay Exo TV. All fees are going to be due instantly and non-refundable, with the exceptions mentioned in the section below, even if the services are suspended, terminated or transferred prior to the end of the term of service. Exo TV explicitly reserves the right to alter pricing through email notification and/or notice on its website.
             Refunds: There is no scope of refund so you get a 7-day trial period for testing purpose. No kind of refund query will be entertained under any circumstances like a bad internet connection or more. The proper working of your channels depends on your internet speed and other technical aspects, we do not guarantee that. Nonetheless, customers can request a refund within 14 days of purchase date upon written notice or email to us before the real setup and/or configuration of their server.
         </div>
     </div>
@@ -150,7 +150,7 @@
             Contact Us
         </div>
         <div class="section-content">
-            In case of any queries or suggestions about our Terms and Conditions, please feel free to contact us at <a class="link" href="mailto:info@quzutv.com">info@quzutv.com</a>
+            In case of any queries or suggestions about our Terms and Conditions, please feel free to contact us at <a class="link" href="mailto:info@Exotv.com">info@Exotv.com</a>
         </div>
     </div>
 </div>
