chore: email domain changed

--- a/terms_conditions.html
+++ b/terms_conditions.html
@@ -150,7 +150,7 @@
             Contact Us
         </div>
         <div class="section-content">
-            In case of any queries or suggestions about our Terms and Conditions, please feel free to contact us at <a class="link" href="mailto:info@Exotv.com">info@Exotv.com</a>
+            In case of any queries or suggestions about our Terms and Conditions, please feel free to contact us at <a class="link" href="mailto:info@exoapp.tv">info@exoapp.tv</a>
         </div>
     </div>
 </div>
