--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div id="expired-issue-container" class="loading-issue-item hide">
                 <div class="loading-issue-message-container">
                     <div class="loading-issue-text">
-                        Your 7 days trial has been expired, please visit our website <span class="login-page-link">https://exoapp.tv/mylist</span> to activate your mac id
+                        Your 7 days trial has been expired, please visit our website <span class="login-page-link">https://exoapp.tv/activation</span> to activate your mac id
                     </div>
                     <div class="loading-issue-info-item">
                         <span class="loading-issue-info-item-label">Your TV mac Address:</span>
